<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_edit_friends"
        android:orderInCategory="100"
        android:title="@string/menu_edit_friends_label"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/menu_log_out_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_text"
        android:icon="@drawable/ic_message_chat"
        android:orderInCategory="100"
        android:title="@string/menu_camera_lable"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_camera"
        android:icon="@mipmap/ic_action_camera"
        android:orderInCategory="100"
        android:title="@string/menu_text_lable"
        app:showAsAction="always" />

</menu>
